fix for tests