@@ -1,9 +1,11 @@
-package ru.practicum.shareit.request;
+package ru.practicum.shareit.request.dto;
 
 import lombok.experimental.UtilityClass;
 import ru.practicum.shareit.item.model.Item;
+import ru.practicum.shareit.request.ItemRequest;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @UtilityClass
 public class ItemRequestMapper {
@@ -13,23 +15,23 @@ public class ItemRequestMapper {
             return null;
         }
 
+        ItemRequestDto dto = new ItemRequestDto();
+        dto.setId(request.getId());
+        dto.setDescription(request.getDescription());
+        dto.setCreated(request.getCreated());
+
         List<ItemRequestDto.ItemDto> itemDtos = items != null
                 ? items.stream()
                 .map(item -> new ItemRequestDto.ItemDto(
                         item.getId(),
                         item.getName(),
-                        item.getDescription(),
-                        item.getAvailable(),
-                        item.getRequest()))
-                .toList()
+                        item.getOwner().getId()))
+                .collect(Collectors.toList())
                 : List.of();
 
-        return new ItemRequestDto(
-                request.getId(),
-                request.getDescription(),
-                request.getCreated(),
-                itemDtos
-        );
+        dto.setItems(itemDtos);
+
+        return dto;
     }
 
     public static ItemRequest toItemRequest(ItemRequestDto dto) {
@@ -38,9 +40,10 @@ public class ItemRequestMapper {
         }
 
         ItemRequest request = new ItemRequest();
-        request.setId(dto.id());
-        request.setDescription(dto.description());
-        request.setCreated(dto.created());
+        request.setId(dto.getId());
+        request.setDescription(dto.getDescription());
+        request.setCreated(dto.getCreated());
+
         return request;
     }
 }
